fix footer copyright spacing, text for age input on forms, bullet point colors on workshops page

--- a/src/css/queries.css
+++ b/src/css/queries.css
@@ -421,7 +421,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
-    row-gap: var(--spacing-250);
+    row-gap: var(--spacing-150);
   }
 
   .copyright {
@@ -429,7 +429,7 @@
     grid-row: 2;
   }
 
-  .copyright-link-group span {
+  .copyright-divider {
     display: none;
   }
 }
